<resources>
    <string name="app_name">music_player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artistaDesconocido">Artista desconocido</string>
    <string name="sinFecha">Fecha no disponible</string>

    <string name="canciones">Canciones</string>
    <string name="albumes">Álbumes</string>
    <string name="artistas">Artistas</string>
    <string name="numero">#</string>

    <string name="album">Álbum</string>
    <string name="artista">Artista</string>
    <string name="agno">Año</string>
    <string name="tituloCancion">Titulo canción</string>

    <string name="opcFoto">Agregar imagen</string>
    <string name="subirImagen">Subir imagen</string>
    <string name="guardarImagen">Guardar imagen</string>
    <string name="editarDatos">Editar canción</string>
    <string name="irAlbum">Ir al álbum</string>
    <string name="irArtista">Ir al artista</string>
    <string name="favorita">Agregar a favoritos</string>
    <string name="eliminar">Eliminar canción</string>
    <string name="actualizarImagen">Actualizar imagén</string>

    <string name="editarCancion">Editar canción</string>
    <string name="fechaCancion">aaaa</string>
    <string name="guardar">Guardar</string>

    <string name="nombreArtista">Nombre del artista</string>
    <string name="nombreAlbum">Nombre del álbum</string>
    <string name="playlist">Listas</string>
    <string name="agregarPlaylist">Crear lista de reproducción</string>
    <string name="favoritos">Canciones favoritas</string>
    <string name="tituloPlaylist">Titulo de la lista</string>
    <string name="listaNueva">Lista de reproducción nueva</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear">CREAR</string>


</resources>