<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:layout_centerHorizontal="true"
    android:background="@color/dark_primary"
    tools:context=".screens.CargarImagen">

>

<RelativeLayout
    android:id="@+id/barraSuperior"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:paddingHorizontal="10dp"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true">

    <ImageView
        android:id="@+id/btnVolver"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:src="@drawable/ic_angle_left_solid_1_"
        />

    <TextView
        android:id="@+id/tituloSeccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/opcFoto"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>

<androidx.cardview.widget.CardView
    android:id="@id/contenedorImagen"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_below="@id/barraSuperior"
    android:layout_marginTop="10dp"
    android:padding="10dp"
    app:cardBackgroundColor="@color/dark_bg"
    android:layout_centerInParent="true"
    android:background="@drawable/round_corner_tres"
    android:layout_centerHorizontal="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/imagenCargada"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_image_regular" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>

<RelativeLayout
    android:id="@+id/btnCargarImagen"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_below="@id/contenedorImagen"
    android:layout_marginStart="50dp"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="50dp"
    android:layout_marginBottom="5dp"
    android:gravity="center"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="5dp"
        android:text="@string/subirImagen"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp" />

</RelativeLayout>

<RelativeLayout
    android:id="@+id/btnGuardarImagen"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_below="@id/btnCargarImagen"
    android:layout_marginEnd="50dp"
    android:layout_marginBottom="20dp"
    android:layout_marginStart="50dp"
    android:gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/guardarImagen"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_centerInParent="true"/>

</RelativeLayout>

</RelativeLayout>

